--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ body {
   outline: none;
   font-size: 24px;
   color: white;
+  position: relative;
   margin-left: 50px;
   -webkit-transition: all 100ms ease-in;
   transition: all 100ms ease-in;
@@ -170,6 +171,16 @@ body {
   border-top: 5px solid #3700ff;
   border-bottom: 5px solid #3700ff;
   border-radius: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
 }
 
 .main-container .home-section .overlay .home-content .home-btn:hover {
@@ -178,10 +189,36 @@ body {
   transition: all 100ms ease-in;
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
-  border-left: 5px solid #3700ff;
-  border-right: 5px solid #3700ff;
-  border-top: 5px solid #007cc3;
-  border-bottom: 5px solid #007cc3;
+  border: 5px solid #3700ff;
+}
+
+.main-container .home-section .overlay .home-content .home-btn:hover span.btn-fill {
+  width: 100%;
+  -webkit-transition: all 150ms ease-in;
+  transition: all 150ms ease-in;
+}
+
+.main-container .home-section .overlay .home-content .home-btn:hover span.btn-text {
+  color: #ffffff;
+}
+
+.main-container .home-section .overlay .home-content .home-btn span.btn-text {
+  z-index: 5;
+  position: absolute;
+  font-weight: bold;
+}
+
+.main-container .home-section .overlay .home-content .home-btn span.btn-fill {
+  height: 100%;
+  width: 0%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  -webkit-transition: all 150ms ease-in;
+  transition: all 150ms ease-in;
+  border-radius: 50px;
+  background: #41a9b5;
 }
 
 .main-container .home-section .overlay .home-contentTwo {
@@ -453,7 +490,7 @@ body {
 }
 
 .main-container .partners .partner-container {
-  width: 50%;
+  width: 60%;
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -999,29 +1036,70 @@ body {
 .main-container .connect-section .form-container form .form-btn {
   border: none;
   width: 200px;
-  height: 50px;
+  height: 30px;
+  padding: 20px;
   outline: none;
   font-size: 20px;
   color: white;
+  position: relative;
   -webkit-transition: all 100ms ease-in;
   transition: all 100ms ease-in;
+  background: #170068;
   border: 5px solid #007cc3;
   border-top: 5px solid #3700ff;
   border-bottom: 5px solid #3700ff;
   border-radius: 50px;
-  background-color: #0f0046;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
 }
 
 .main-container .connect-section .form-container form .form-btn:hover {
   cursor: pointer;
   -webkit-transition: all 100ms ease-in;
   transition: all 100ms ease-in;
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
   border-left: 5px solid #3700ff;
   border-right: 5px solid #3700ff;
   border-top: 5px solid #007cc3;
   border-bottom: 5px solid #007cc3;
+}
+
+.main-container .connect-section .form-container form .form-btn:hover span.btn-fill {
+  width: 100%;
+  -webkit-transition: all 150ms ease-in;
+  transition: all 150ms ease-in;
+  opacity: 1;
+}
+
+.main-container .connect-section .form-container form .form-btn:hover span.btn-text {
+  color: #ffffff;
+}
+
+.main-container .connect-section .form-container form .form-btn span.btn-text {
+  z-index: 5;
+  position: absolute;
+  font-weight: bold;
+}
+
+.main-container .connect-section .form-container form .form-btn span.btn-fill {
+  height: 100%;
+  width: 0%;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  -webkit-transition: all 150ms ease-in;
+  transition: all 150ms ease-in;
+  border-radius: 50px;
+  background: #41a9b5;
 }
 
 footer {
